[tool.poetry]
name = "debugutils"
version = "0.1.0"
description = ""
authors = ["'Gilad Barnea' <giladbrn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
twine = {version = "^3.4.2", optional = true}
semver = {version = "^2.13.0", optional = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
